--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
     <title>EatShuffle</title>
+    <meta name="description" content="Choose a random place to eat tonight.">
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaI5WVGIhbvZ8fT640NNjc5RMnV9p9r4k&libraries=places"></script>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but EatShuffle doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry, but EatShuffle required JavaScript to function. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
