Add material fonts to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>EatShuffle</title>
     <meta name="description" content="Choose a random place to eat tonight.">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaI5WVGIhbvZ8fT640NNjc5RMnV9p9r4k&libraries=places"></script>
   </head>
   <body>
